fix: Issue with the menu not showing when window is resized

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -6,6 +6,7 @@
 
 /* Changes style of the body on the login page */
 #login {
+	padding-top: 0px !important;
     background-image: linear-gradient($purple, $dark-purple) !important;
 }
 
